--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
       </div>
 
       <div id="list">
-        <p>AÇÕES
-        <p>EXTERIOR
-        <p>TESOURO DIRETO
-        <p>FUNDOS IMOBILIÁRIOS
+        <a id="mainLink">INÍCIO</a>
+        <a href="acoes.html"><p>AÇÕES</p></a>
+        <a href="exterior.html"><p>EXTERIOR</p></a>
+        <a href="rendafixa.html"><p>RENDA FIXA</p></a>
+        <a href="fiis.html"><p>FUNDOS IMOBILIÁRIOS</p></a>
       </div>
     </header>
 
@@ -30,15 +31,15 @@
         <p>&nbsp&nbsp&nbsp&nbspA Faust Capital é uma Planejadora de Investimentos fundada por
         Igor Faustino. Muitas pessoas querem investir seu dinheiro, porém não
         possuem conhecimento ou tempo para realizar todo o estudo
-        e planejamento.<br><br>
-        &nbsp&nbsp&nbsp&nbspNossa missão é realizar o plano de investimento
+        e planejamento.</p>
+        <p>&nbsp&nbsp&nbsp&nbspNossa missão é realizar o plano de investimento
         ideal, buscando o maior retorno ao longo prazo e gerando
-        renda passiva para nossos clientes.<br><br>
-        &nbsp&nbsp&nbsp&nbspUtilizamos nossa própria estratégia de investimentos
+        renda passiva para nossos clientes.</p>
+        <p>&nbsp&nbsp&nbsp&nbspUtilizamos nossa própria estratégia de investimentos
         baseada em <i>Value Investing</i> para investir nas melhores
-        empresas da bolsa de valores.
-        Quer saber mais e investir seu dinheiro com estratégia?<br><br>
-        Entre em contato agora mesmo!<br><br>
+        empresas da bolsa de valores.</p>
+        <p>&nbsp&nbsp&nbsp&nbspQuer saber mais e investir seu dinheiro com estratégia?</p><br><br>
+
         <div id="links1">
           <a href="https://wa.me/44998756202" target="_blank" id="link">Entrar em contato pelo WhatsApp</a><br><br>
         </div>
@@ -54,6 +55,8 @@
       <footer>
         <p>Copyright &copy Faust Capital - 2022</p>
       </footer>
+
+      <script src="code.js"></script>
 
 </body>
 </html>
